plugins {
    id 'java'
}

group = 'dev.alesixdev'
version = '1.2.2'

repositories {
    mavenCentral()
    flatDir {
        dirs 'libraries', 'C:/Users/420Cl/AppData/Roaming/Hytale/install/release/package/game/latest/Server'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly name: 'HytaleServer'

    implementation 'org.yaml:snakeyaml:2.2'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

jar {
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
